pausing / resuming of tracks
Signed-off-by: rxcmr <lythe1107@icloud.com>