@@ -6,9 +6,9 @@ plugins {
   id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
-mainClassName = 'dcl.Pilot'
+mainClassName = 'com.fortuneteller.dclient.Pilot'
 group 'com.fortuneteller'
-version '1.8.1l'
+version '1.9.2l'
 
 targetCompatibility = 13
 sourceCompatibility = 13
@@ -16,7 +16,6 @@ sourceCompatibility = 13
 dependencies {
   // implementation group: "", name: "", version: ""
   implementation group: "com.gitlab.aberrantfox", name: "kutils", version: "0.13.0"
-  implementation group: "org.reflections", name: "reflections", version: "0.9.10"
   implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib", version: "1.3.61"
   implementation group: "org.jetbrains.kotlin", name: "kotlin-reflect", version: "1.3.61"
   implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib-common", version: "1.3.61"
@@ -25,9 +24,8 @@ dependencies {
   implementation group: "club.minnced", name: "jda-reactor", version: "1.0.0"
   implementation group: "org.jsoup", name: "jsoup", version: "1.12.1"
   implementation group: "io.github.cdimascio", name: "java-dotenv", version: "5.1.3"
-  implementation group: "ch.qos.logback", name: "logback-classic", version: "1.3.0-alpha5"
-  implementation group: "org.slf4j", name: "slf4j-api", version: "2.0.0-alpha1"
   implementation group: "com.jagrosh", name: "jda-utilities", version: "3.0.2"
+  implementation group: "ch.qos.logback", name: "logback-classic", version: "1.3.0-alpha5"
   implementation group: "com.jagrosh", name: "JagTag", version: "0.5"
   implementation group: "com.sedmelluq", name: "lavaplayer", version: "1.3.32"
   implementation group: "org.codehaus.groovy", name: "groovy", version: "3.0.0-rc-2"
@@ -44,7 +42,7 @@ repositories {
 }
 
 shadowJar {
-  minimize()
+  // No minimization needed.
 }
 
 sonarqube {
@@ -56,18 +54,6 @@ sonarqube {
   }
 }
 
-tasks.withType(JavaCompile).each {
-  it.options.compilerArgs.add('--enable-preview')
-}
-
-compileJava {
-  options.compilerArgs += ["--enable-preview"]
-}
-
-test {
-  jvmArgs(['--enable-preview'])
-}
-
 defaultTasks "afterBuild"
 
 task(afterBuild, dependsOn: 'classes', type: JavaExec) {
@@ -75,10 +61,6 @@ task(afterBuild, dependsOn: 'classes', type: JavaExec) {
   classpath = sourceSets.main.runtimeClasspath
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-  kotlinOptions {
-    jvmTarget = "12"
-  }
+compileKotlin {
+  kotlinOptions.jvmTarget = '12'
 }
-
-compileJava.options.encoding = 'UTF-8'
